Make sure slides don't spill outside the slideshow

--- a/assets/sass/sections/_projects.sass
+++ b/assets/sass/sections/_projects.sass
@@ -10,6 +10,7 @@ section.project
 
   .project-images
     position: relative
+    overflow: hidden
 
     .flex-control-nav
       display: none
